--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@ label:focus,
 
 .Card {
 	width: 100%;
-	background: rgb(131, 133, 106);
+	background: #333333f0;
 	overflow: hidden;
 	border-radius: 5px;
 }
@@ -73,7 +73,7 @@ label:focus,
 
 .Line {
 	height: 1px;
-	background-color: #eeeeee;
+	background-color: #dddddd;
 	width: 100%;
 	margin: 20px 0px 20px 0px;
 }
@@ -89,10 +89,15 @@ label:focus,
 }
 
 .Color--accent {
-	background: rgb(173, 173, 144);
+	background: rgb(58, 58, 58);
 	background: linear-gradient(
 		130deg,
-		rgba(173, 173, 144, 1) 0%,
-		rgba(145, 144, 105, 1) 100%
+		rgb(58, 58, 58) 0%,
+		rgba(0, 0, 0, 1) 25%,
+		rgba(0, 0, 0, 1) 40%,
+		rgb(87, 87, 87) 60%,
+		rgba(0, 0, 0, 1) 70%,
+		rgba(0, 0, 0, 1) 80%,
+		rgb(92, 92, 92) 100%
 	);
 }
